# Linux-iProjection

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run.sh  scratch.py
.github/workflows/: ci.yml  release.yml
data/: dev.epsonctl.EpsonCtl.desktop  dev.epsonctl.EpsonCtl.metainfo.xml  dev.linux_iprojection.LinuxIProjection.desktop  dev.linux_iprojection.LinuxIProjection.metainfo.xml  epsonctl.gresource.xml  linux_iprojection.gresource.xml
data/icons/hicolor/: index.theme
docs/: PROTOCOL_NOTES.md
packaging/: APPIMAGE_NOTES.md  build-appimage.sh
packaging/debian/: changelog  control  rules
packaging/flatpak/: dev.epsonctl.EpsonCtl.yml  dev.linux_iprojection.LinuxIProjection.yml
reference/Epson-projector-lan-master/: epson.py  udp_button.ino
reference/agent_files/: parse_cmds.py  parse_cmds2.py  parse_cmds3.py  parse_docs.py  test_enum.py  test_indicator.py  test_pystray.py  test_subprocess_tray.py
reference/eshare-linux-client-main/: README.md  pyproject.toml  requirements.txt
reference/eshare-linux-client-main/scripts/: setup_linux_dev.sh
reference/eshare-linux-client-main/src/: app_window.py  main.py
reference/eshare-linux-client-main/src/control/: epson_controller.py  pjlink_controller.py
reference/eshare-linux-client-main/src/discovery/: __init__.py  mdns_scanner.py  network_scanner.py  ssdp_scanner.py
reference/eshare-linux-client-main/src/models/: device.py
reference/eshare-linux-client-main/src/streaming/: capture_wayland.py  gstreamer_pipeline.py
reference/eshare-linux-client-main/src/ui/: device_row.py  settings_panel.py  status_bar.py
reference/eshare-linux-client-main/tests/: test_discovery.py  test_epson_control.py  test_gstreamer.py
reference/eshare-linux-client-main/tools/: mock_receiver.py
reference/old.epsonctl/: README.md  pyproject.toml
reference/old.epsonctl/data/: dev.epsonctl.EpsonCtl.desktop
reference/old.epsonctl/src/epsonctl/: app.py  cast.py  discovery.py  protocol.py
src/epsonctl/: __init__.py  __main__.py  app.py  cast.py  cli.py  client.py  config.py  discovery.py  pjlink.py  protocol.py
src/linux_iprojection/: __init__.py  __main__.py  app.py  cast.py  cli.py  client.py  config.py  dbus_service.py  discovery.py  pjlink.py  protocol.py  tray.py
tests/: conftest.py  test_config.py  test_discovery.py  test_protocol.py
