# linux-iprojection - Built by John Varghese (J0X) | https://github.com/John-Varghese-EH
[project]
name = "linux-iprojection"
version = "1.1.0"
description = "Native Linux control & casting app for Epson projectors (ESC/VP.net + EShare)"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "John Varghese (J0X)", email = "john@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "PyGObject>=3.46",   # GTK4 + libadwaita bindings
    "zeroconf>=0.132",   # mDNS discovery of projectors on the LAN
    "pystray>=0.19.0",   # Tray icon support
    "Pillow>=9.0.0",     # Image generation for tray icon
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.urls]
Homepage = "https://github.com/John-Varghese-EH/Linux-iProjection"
Issues = "https://github.com/John-Varghese-EH/Linux-iProjection/issues"

[project.scripts]
linux-iprojection = "linux_iprojection.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
