[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "linux-iprojection"
version = "0.1.0"
description = "Wireless desktop projection to Epson / EShare displays from Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "linux-iprojection contributors" }]
keywords = ["projection", "wireless", "epson", "eshare", "gstreamer", "gtk4"]

dependencies = [
    # GTK4 + GStreamer Python bindings (system package: python3-gi)
    # "PyGObject>=3.44",  # install via system package manager, not pip
    "zeroconf>=0.128.0",   # mDNS / DNS-SD discovery
    "netifaces2>=0.0.19",  # Pure-Python subnet detection (Windows + Linux)
    "dasbus>=1.7",         # DBus bindings for xdg-desktop-portal (Linux only)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
]

[project.scripts]
linux-iprojection = "src.main:main"
mock-receiver = "tools.mock_receiver:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tools*"]
