[project]
name = "epsonctl"
version = "0.1.0"
description = "Native Linux control & casting app for Epson projectors (ESC/VP.net + EShare)"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.46",   # GTK4 + libadwaita bindings
    "zeroconf>=0.132",   # mDNS discovery of projectors on the LAN
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
epsonctl = "epsonctl.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
